2006-01-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Replaced add_symtab() with add_entity() and 2 add_intervals().

	* main/policy.y :

	  - Now uses add_entity().

2006-01-06  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/atom.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Added an interval parameter in each fact.

	* lib/mapper.cpp :
	* lib/mapper.h :

	  - Mapper now takes into account that each fact also has an interval
	    parameter.

	* main/agent.y :
	* main/policy.y	:

	  - Temporarily adds a "default" interval in each fact ("today").

	* lib/Makefile.in :
	* main/Makefile.in :

	  - The library and the test program are now linked with libtribe.so.

2006-01-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/rel.cpp :
	* lib/rel.h :
	* lib/rlist.cpp :
	* lib/rlist.h :
	* lib/tnet.cpp :
	* lib/tnet.h :

	  - Added classes to represent temporal interval relations.

	* lib/identifier.cpp :
	* lib/identifier.h :

	  - Identifiers can now also be time intervals.

	  - Reorganised macro definitions to include an interval type.

	* lib/symtab.cpp :
	* lib/symtab.h :

	  - Added another get() function that will give the index of an
	    identifier of a specified type.

	  - Symtab now also stores time interval identifiers.

	* lib/fact.cpp :
	* lib/mapper.cpp :
	* lib/polbase.cpp :
	* main/policy.y :

	  - Now uses new identifier macros.

2006-01-03  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :
	* configure :

	  - Vlad package now requires a working libtribe.

2005-12-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Merged with vlad-1_4_1

	* Tagged vlad-1_4_1

	* lib/identifier.h :

	  - VLAD_IDENT_ENT was not part of the entity types.

2005-12-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_4_0

2005-12-24  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
